Fix examples library import

--- a/examples/index.html
+++ b/examples/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <script do-not-document="true" type="text/javascript" src="canvas-api.js"></script>
+  <script do-not-document="true" type="text/javascript" src="../lib/index.js"></script>
   <script do-not-document="true" type="text/javascript" src="demo-only-stuff/create-canvas.js"></script>
 
   <div id="container" class="container">
