--- a/examples/index.html
+++ b/examples/index.html
@@ -17,6 +17,10 @@
       Rectangle methods
     </h2>
 
+    <h3>
+      Rectangle
+    </h3>
+
     <script type="text/javascript">
       createCanvas();
       var element = document.getElementById('canvas');
@@ -67,6 +71,10 @@
         .plotRect(25, 25, 50, 50)
         .fill();
     </script>
+
+    <h3>
+      Rounded rectangle
+    </h3>
 
     <script type="text/javascript">
       createCanvas();
