Color examples rgb

--- a/examples/index.html
+++ b/examples/index.html
@@ -41,7 +41,7 @@
       canvas
         .setWidth(100)
         .setHeight(100)
-        .setFill('cyan')
+        .setFill('green')
         .setStroke('black')
         .fillRect(25, 25, 50, 50)
         .strokeRect(25, 25, 50, 50);
@@ -55,7 +55,7 @@
       canvas
         .setWidth(100)
         .setHeight(100)
-        .setFill('green')
+        .setFill('blue')
         .setStroke('black')
         .plotRect(25, 40, 50, 20)
         .fill()
@@ -86,7 +86,7 @@
       canvas
         .setWidth(100)
         .setHeight(100)
-        .setFill('cyan')
+        .setFill('green')
         .setStroke('black')
         .fillRoundedRect(25, 25, 50, 50, 100)
         .strokeRoundedRect(25, 25, 50, 50, 100);
@@ -100,7 +100,7 @@
       canvas
         .setWidth(100)
         .setHeight(100)
-        .setFill('green')
+        .setFill('blue')
         .setStroke('black')
         .plotRoundedRect(25, 40, 50, 20, 100)
         .fill()
