Only use end path on closed examples

--- a/examples/index.html
+++ b/examples/index.html
@@ -170,10 +170,8 @@
         .setHeight(100)
         .beginPath()
         .fillArc(45, 45, 25, 0, Math.PI, false, 'red')
-        .endPath()
         .beginPath()
-        .strokeArc(55, 55, 25, 0, Math.PI, true, 'black')
-        .endPath();
+        .strokeArc(55, 55, 25, 0, Math.PI, true, 'black');
     </script>
 
     <script type="text/javascript">
@@ -188,10 +186,8 @@
         .setStroke('black')
         .beginPath()
         .fillArc(45, 45, 25, 0, Math.PI, false)
-        .endPath()
         .beginPath()
-        .strokeArc(55, 55, 25, 0, Math.PI, true)
-        .endPath();
+        .strokeArc(55, 55, 25, 0, Math.PI, true);
     </script>
 
     <script type="text/javascript">
@@ -225,10 +221,8 @@
         .setHeight(100)
         .beginPath()
         .fillEllipse(45, 45, 25, 25, 0, 0, Math.PI, false, 'red')
-        .endPath()
         .beginPath()
-        .strokeEllipse(55, 55, 25, 25, 0, 0, Math.PI, true, 'black')
-        .endPath();
+        .strokeEllipse(55, 55, 25, 25, 0, 0, Math.PI, true, 'black');
     </script>
 
     <script type="text/javascript">
@@ -243,10 +237,8 @@
         .setStroke('black')
         .beginPath()
         .fillEllipse(45, 45, 25, 10, 0, 0, Math.PI, false)
-        .endPath()
         .beginPath()
-        .strokeEllipse(55, 55, 25, 10, 0, 0, Math.PI, true)
-        .endPath();
+        .strokeEllipse(55, 55, 25, 10, 0, 0, Math.PI, true);
     </script>
 
     <script type="text/javascript">
@@ -279,8 +271,7 @@
         .setWidth(100)
         .setHeight(100)
         .beginPath()
-        .strokeLine(25, 25, 75, 75, 'red')
-        .endPath();
+        .strokeLine(25, 25, 75, 75, 'red');
     </script>
 
     <script type="text/javascript">
@@ -293,8 +284,7 @@
         .setHeight(100)
         .setStroke('green')
         .beginPath()
-        .strokeLine(25, 25, 75, 75)
-        .endPath();
+        .strokeLine(25, 25, 75, 75);
     </script>
 
     <script type="text/javascript">
