Set stroke in point example

--- a/examples/index.html
+++ b/examples/index.html
@@ -98,6 +98,7 @@
         .setWidth(100)
         .setHeight(100)
         .setFill('blue')
+        .setStroke('black')
         .plotPoint(50, 50)
         .fill()
         .stroke();
