Add stroke point method

--- a/examples/index.html
+++ b/examples/index.html
@@ -74,7 +74,8 @@
       canvas
         .setWidth(100)
         .setHeight(100)
-        .fillPoint(50, 50, 'red');
+        .fillPoint(45, 45, 'red')
+        .strokePoint(55, 55, 'black');
     </script>
 
     <script type="text/javascript">
@@ -86,7 +87,9 @@
         .setWidth(100)
         .setHeight(100)
         .setFill('green')
-        .fillPoint(50, 50);
+        .setStroke('black')
+        .fillPoint(45, 45)
+        .strokePoint(55, 55);
     </script>
 
     <script type="text/javascript">
