Rename point methods to pixel

--- a/examples/index.html
+++ b/examples/index.html
@@ -153,7 +153,7 @@
     </script>
 
     <h3>
-      Point
+      Pixel
     </h3>
 
     <script type="text/javascript">
@@ -164,8 +164,8 @@
       canvas
         .setWidth(100)
         .setHeight(100)
-        .fillPoint(45, 45, 'red')
-        .strokePoint(55, 55, 'black');
+        .fillPixel(45, 45, 'red')
+        .strokePixel(55, 55, 'black');
     </script>
 
     <script type="text/javascript">
@@ -178,8 +178,8 @@
         .setHeight(100)
         .setFill('green')
         .setStroke('black')
-        .fillPoint(45, 45)
-        .strokePoint(55, 55);
+        .fillPixel(45, 45)
+        .strokePixel(55, 55);
     </script>
 
     <script type="text/javascript">
@@ -192,7 +192,7 @@
         .setHeight(100)
         .setFill('blue')
         .setStroke('black')
-        .plotPoint(50, 50)
+        .plotPixel(50, 50)
         .fill()
         .stroke();
     </script>
