Reduce bloat in examples

--- a/examples/index.html
+++ b/examples/index.html
@@ -14,6 +14,20 @@
   <div id="container" class="container">
 
     <h2>
+      Getting started
+    </h2>
+
+    <h3>
+      Create a new sensible canvas interface
+    </h3>
+
+    <pre>var Canvas = require('sensible-canvas-interface');
+
+var element = document.getElementById('canvas');
+
+var canvas = new Canvas(element);</pre>
+
+    <h2>
       Solid shape methods
     </h2>
 
@@ -22,9 +36,7 @@
     </h3>
 
     <script type="text/javascript">
-      createCanvas();
-      var element = document.getElementById('canvas');
-      var canvas = new Canvas(element);
+      var canvas = createCanvas();
 
       canvas
         .setWidth(100)
@@ -34,9 +46,7 @@
     </script>
 
     <script type="text/javascript">
-      createCanvas();
-      var element = document.getElementById('canvas');
-      var canvas = new Canvas(element);
+      var canvas = createCanvas();
 
       canvas
         .setWidth(100)
@@ -48,9 +58,7 @@
     </script>
 
     <script type="text/javascript">
-      createCanvas();
-      var element = document.getElementById('canvas');
-      var canvas = new Canvas(element);
+      var canvas = createCanvas();
 
       canvas
         .setWidth(100)
@@ -67,9 +75,7 @@
     </h3>
 
     <script type="text/javascript">
-      createCanvas();
-      var element = document.getElementById('canvas');
-      var canvas = new Canvas(element);
+      var canvas = createCanvas();
 
       canvas
         .setWidth(100)
@@ -79,9 +85,7 @@
     </script>
 
     <script type="text/javascript">
-      createCanvas();
-      var element = document.getElementById('canvas');
-      var canvas = new Canvas(element);
+      var canvas = createCanvas();
 
       canvas
         .setWidth(100)
@@ -93,9 +97,7 @@
     </script>
 
     <script type="text/javascript">
-      createCanvas();
-      var element = document.getElementById('canvas');
-      var canvas = new Canvas(element);
+      var canvas = createCanvas();
 
       canvas
         .setWidth(100)
@@ -112,9 +114,7 @@
     </h3>
 
     <script type="text/javascript">
-      createCanvas();
-      var element = document.getElementById('canvas');
-      var canvas = new Canvas(element);
+      var canvas = createCanvas();
 
       canvas
         .setWidth(100)
@@ -124,9 +124,7 @@
     </script>
 
     <script type="text/javascript">
-      createCanvas();
-      var element = document.getElementById('canvas');
-      var canvas = new Canvas(element);
+      var canvas = createCanvas();
 
       canvas
         .setWidth(100)
@@ -138,9 +136,7 @@
     </script>
 
     <script type="text/javascript">
-      createCanvas();
-      var element = document.getElementById('canvas');
-      var canvas = new Canvas(element);
+      var canvas = createCanvas();
 
       canvas
         .setWidth(100)
@@ -157,9 +153,7 @@
     </h3>
 
     <script type="text/javascript">
-      createCanvas();
-      var element = document.getElementById('canvas');
-      var canvas = new Canvas(element);
+      var canvas = createCanvas();
 
       canvas
         .setWidth(100)
@@ -169,9 +163,7 @@
     </script>
 
     <script type="text/javascript">
-      createCanvas();
-      var element = document.getElementById('canvas');
-      var canvas = new Canvas(element);
+      var canvas = createCanvas();
 
       canvas
         .setWidth(100)
@@ -183,9 +175,7 @@
     </script>
 
     <script type="text/javascript">
-      createCanvas();
-      var element = document.getElementById('canvas');
-      var canvas = new Canvas(element);
+      var canvas = createCanvas();
 
       canvas
         .setWidth(100)
@@ -206,9 +196,7 @@
     </h3>
 
     <script type="text/javascript">
-      createCanvas();
-      var element = document.getElementById('canvas');
-      var canvas = new Canvas(element);
+      var canvas = createCanvas();
 
       canvas
         .setWidth(100)
@@ -220,9 +208,7 @@
     </script>
 
     <script type="text/javascript">
-      createCanvas();
-      var element = document.getElementById('canvas');
-      var canvas = new Canvas(element);
+      var canvas = createCanvas();
 
       canvas
         .setWidth(100)
@@ -236,9 +222,7 @@
     </script>
 
     <script type="text/javascript">
-      createCanvas();
-      var element = document.getElementById('canvas');
-      var canvas = new Canvas(element);
+      var canvas = createCanvas();
 
       canvas
         .setWidth(100)
@@ -257,9 +241,7 @@
     </h3>
 
     <script type="text/javascript">
-      createCanvas();
-      var element = document.getElementById('canvas');
-      var canvas = new Canvas(element);
+      var canvas = createCanvas();
 
       canvas
         .setWidth(100)
@@ -271,9 +253,7 @@
     </script>
 
     <script type="text/javascript">
-      createCanvas();
-      var element = document.getElementById('canvas');
-      var canvas = new Canvas(element);
+      var canvas = createCanvas();
 
       canvas
         .setWidth(100)
@@ -287,9 +267,7 @@
     </script>
 
     <script type="text/javascript">
-      createCanvas();
-      var element = document.getElementById('canvas');
-      var canvas = new Canvas(element);
+      var canvas = createCanvas();
 
       canvas
         .setWidth(100)
@@ -308,9 +286,7 @@
     </h3>
 
     <script type="text/javascript">
-      createCanvas();
-      var element = document.getElementById('canvas');
-      var canvas = new Canvas(element);
+      var canvas = createCanvas();
 
       canvas
         .setWidth(100)
@@ -320,9 +296,7 @@
     </script>
 
     <script type="text/javascript">
-      createCanvas();
-      var element = document.getElementById('canvas');
-      var canvas = new Canvas(element);
+      var canvas = createCanvas();
 
       canvas
         .setWidth(100)
@@ -333,9 +307,7 @@
     </script>
 
     <script type="text/javascript">
-      createCanvas();
-      var element = document.getElementById('canvas');
-      var canvas = new Canvas(element);
+      var canvas = createCanvas();
 
       canvas
         .setWidth(100)
@@ -352,9 +324,7 @@
     </h3>
 
     <script type="text/javascript">
-      createCanvas();
-      var element = document.getElementById('canvas');
-      var canvas = new Canvas(element);
+      var canvas = createCanvas();
 
       canvas
         .setWidth(100)
@@ -367,9 +337,7 @@
     </script>
 
     <script type="text/javascript">
-      createCanvas();
-      var element = document.getElementById('canvas');
-      var canvas = new Canvas(element);
+      var canvas = createCanvas();
 
       canvas
         .setWidth(100)
@@ -385,9 +353,7 @@
     </script>
 
     <script type="text/javascript">
-      createCanvas();
-      var element = document.getElementById('canvas');
-      var canvas = new Canvas(element);
+      var canvas = createCanvas();
 
       canvas
         .setWidth(100)
